--- a/samples/Svg.Skia.Avalonia/Svg.Skia.Avalonia.csproj
+++ b/samples/Svg.Skia.Avalonia/Svg.Skia.Avalonia.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Svg.Skia" Version="0.0.5-preview.0" />
+    <PackageReference Include="Svg.Skia" Version="0.0.5" />
   </ItemGroup>
 
 </Project>
